src/objects/School_Term__c.object
<CustomObject>
    <fields>
        <fullName>Active_Year__c</fullName>
        <description>Converts School year picklist into a year to rollup to contact</description>
        <formula>VALUE(RIGHT( TEXT(School_Year__c) , 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorization_to_treat_minor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization to treat minor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Free_Reduced_Lunch_Picklist__c</fullName>
        <inlineHelpText>Does your child qualify for free/reduced lunch?</inlineHelpText>
        <label>Free/Reduced Lunch (Picklist)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Sign_Up_Source__c</fullName>
        <inlineHelpText>How this School Term record came to be in Salesforce. (default = Paper, byText and byEmail mean it was the Site)</inlineHelpText>
        <label>Sign Up Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                    <default>true</default>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Virtual_Program__c</fullName>
        <inlineHelpText>Is this Program virtual?</inlineHelpText>
        <label>Virtual Program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Term__c</fullName>
        <description>Marks a term as current  (for use by rollups). Rolls over 7/1</description>
        <formula>IF( 
( MONTH( TODAY()) &lt;=6 &amp;&amp; YEAR(TODAY())=  Active_Year__c  ) || 
( MONTH( TODAY()) &gt;7 &amp;&amp; YEAR(TODAY())=  Active_Year__c  - 1 ) , 

TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Preferred_Medical_Provider__c</fullName>
        <formula>Parent__r.Emergency_Preferred_Medical_Provider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specified on the Parent record with other emergency info</inlineHelpText>
        <label>Emergency Preferred Medical Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>STUDENT evaluation consent Check if yes, leave unchecked if no.</inlineHelpText>
        <label>Evaluation Consent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Income_Level__c</fullName>
        <description>Pulls in income level from parent record</description>
        <formula>TEXT(Parent__r.Income__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Income Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_reduced_lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free/reduced lunch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Left_Program_Early_Date__c</fullName>
        <description>Tracks when students drop out.</description>
        <label>Left Program Early Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Left_Program_Early__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Note date student left and reason in &quot;Notes&quot;</inlineHelpText>
        <label>Left Program Early</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <formula>Parent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Form Assembly lookup</inlineHelpText>
        <label>Parent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Initials__c</fullName>
        <inlineHelpText>Please initial below to officially sign this document.</inlineHelpText>
        <label>Parent Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Packet_URL_Unsigned__c</fullName>
        <inlineHelpText>Form Assembly record of the electronic parent packet, waiver, etc. This is the unsigned data.</inlineHelpText>
        <label>Parent Packet URL- Unsigned</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Packet_URL__c</fullName>
        <inlineHelpText>Form Assembly record of the electronic parent packet, waiver, etc. If this is blank, the contract signature has not been verified yet.</inlineHelpText>
        <label>Parent Packet URL- Signed</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the parent consent for evaluation? Check if yes, leave unchecked if no.</inlineHelpText>
        <label>Parent Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact for tracking parents</description>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <infoMessage>Choose a contact of record type Parent</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>School Terms (as Parent)</relationshipLabel>
        <relationshipName>School_Terms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Day__c</fullName>
        <description>Day of the week the after-school program meets</description>
        <label>Program Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Region__c</fullName>
        <formula>TEXT(School__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <description>School year for the term (September-June)</description>
        <label>School Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2011-2012</fullName>
                </value>
                <value>
                    <fullName>2010-2011</fullName>
                </value>
                <value>
                    <fullName>2009-2010</fullName>
                </value>
                <value>
                    <fullName>2008-2009</fullName>
                </value>
                <value>
                    <fullName>2007-2008</fullName>
                </value>
                <value>
                    <fullName>2006-2007</fullName>
                </value>
                <value>
                    <fullName>2005-2006</fullName>
                </value>
                <value>
                    <fullName>2004-2005</fullName>
                </value>
                <value>
                    <fullName>2003-2004</fullName>
                </value>
                <value>
                    <fullName>2002-2003</fullName>
                </value>
                <value>
                    <fullName>2001-2002</fullName>
                </value>
                <value>
                    <fullName>2000-2001</fullName>
                </value>
                <value>
                    <fullName>2020-2021</fullName>
                </value>
                <value>
                    <fullName>2021-2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>Master-Detail to Account to track the school</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>School Terms at School</relationshipLabel>
        <relationshipName>School_Terms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_School_ID__c</fullName>
        <label>Student School ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>Master Detail to Contact for student</description>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Student, Alumna</value>
            </filterItems>
            <infoMessage>Find contact of record type Student</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>School Terms (as Student)</relationshipLabel>
        <relationshipName>School_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>X2016_17_School_Terms</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Student__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_Year__c</field>
            <operation>equals</operation>
            <value>2017-2018</value>
        </filters>
        <label>2017-2018 School Terms</label>
        <language>en_US</language>
    </listViews>
</CustomObject>